# burn-scar-detection

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
scripts/: preprocess_data.py  preprocess_glcm.py  train.py
src/burn_scar_detection/: config.py  data_loading.py  engine.py  model.py
