[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "burn-scar-detection"
version = "0.1.0"
authors = [
    { name = "Bruno Samuel Ardenghi Gonçalves", email = "bruno.samuel@ufrgs.br" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "numpy",
    "rasterio",
    "spyndex",
    "torchvision",
    "segmentation_models_pytorch",
    "scikit-learn",
    "torchmetrics",
]
